--- a/index.css
+++ b/index.css
@@ -34,6 +34,9 @@ body{
 
     margin: 5vh;
     padding: 3vh;
+
+    animation: fadeInOut 1s ease-in-out;
+
 }
 
 .contactObject{
@@ -41,7 +44,7 @@ body{
     height: 12vh;
     width: 40vw;
     border: 3 solid rgb(29, 29, 29);
-    border-radius: 5px;
+    border-radius: 5vw;
     font-size: 9vh;
     margin: 3vh;
 }
