--- a/index.css
+++ b/index.css
@@ -69,15 +69,16 @@ body{
 
 }
 #oldDate{
-    text-align: center;
-    margin-right: 5vh;
+    text-align:start;
     padding: 5vh;
     background-color: rgb(168, 99, 232);
     width: 30%;
-    height: 50%;
+    min-height: 50vh;
+
     font-family: monospace;
     font-size: 3vh;
-    border-radius: 5px;
+    border-radius: 7px;
+
 }
 
 /* .copyButton{
