--- a/index.css
+++ b/index.css
@@ -280,6 +280,8 @@ body{
     color: beige;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .MPCalculatorInput{
