--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ body{
     border-radius: 5vw;
     font-size: 7vh;
     margin: 3vh;
-    box-shadow: 1vh 1vh 2vh 1vh; 
+    box-shadow: 1vh 1vh 2vh; 
     font-family: monospace;
 
 }
