--- a/index.css
+++ b/index.css
@@ -284,6 +284,7 @@ body{
     align-items: center;
     justify-content: center;
     gap: 0.5vh;
+    text-align: center;
 }
 
 .MPCalculatorInput{
