--- a/index.css
+++ b/index.css
@@ -38,6 +38,10 @@ body
     --section-wide: 80%;
     --section-heigth:12vh;
     --expended-section-heigth: 15vh;
+
+    --section-background-color1: rgb(81, 113, 108);
+    --section-background-color2: rgb(111, 85, 133);
+    --englishSection: linear-gradient( rgb(59, 58, 58), rgb(223, 37, 37), rgb(255, 255, 5));
 }
 
 *{
@@ -50,11 +54,12 @@ html, body{
     padding: 0;
     height: 100%;
     width: 100%;
+    
 }
 
 body{
     background-color: rgb(66, 65, 64);
-    align-items: center;
+    align-items: var(--section-background-color)
     justify-content: center;
 }
 
@@ -101,9 +106,9 @@ body{
     width: 40%;
 
     display: flex;
-    align-items:center;
     flex-direction: column;
-    justify-content: center;
+    align-items:center;
+    justify-content: space-around;
     gap: 2vh;
 }
 
@@ -127,6 +132,7 @@ body{
     text-align: center;
     border: 2px solid rgb(33, 28, 19);
     overflow: hidden;
+    font-size: 3vh;
 }
 .item:hover{
     cursor: pointer;
@@ -315,13 +321,16 @@ body{
     background-color: lightskyblue;
 }
 
+/* #textBuilder{
+    margin: 0 -5vh 0 0;
+} */
 .textBuilder{
     order: 5;
 
     width: calc(var(--section-wide)/2);
 
     height: var(--section-heigth);
-    border: 2px solid black;
+    border: 1px solid rgb(82, 82, 82); 
     border-radius: 3vh;
 
     display: flex;
@@ -330,15 +339,14 @@ body{
     text-align: center;
 
     font-size: 3vh;
-
-    /* margin-top: 10vh; */
+    color: rgb(120, 120, 120);
 }
 .textBuilder:hover{
     transition: all 700ms;
-    background-color: rgba(184, 209, 185, 0.5);
+    background-color: rgba(89, 93, 89, 0.2);
     cursor: pointer; 
 }
-.textBuilderExpend{
+.textBuilderExpend{                
     background-color: rgb(88, 77, 99);
 
     margin: 0 0 40vh 0;
@@ -371,9 +379,14 @@ body{
     color: rgb(181, 181, 181);
 
 }
-.textBuilderSection:hover{
-    background-color: rgb(72, 38, 72);
-}
+/* .textBuilderSection:hover{
+    background-color: rgb(180, 177, 245);
+} */
+/* #to-English{
+    color: rgb(39, 39, 39);
+} */
+
+
 .secondLineSubSection{
     width: 30%;
     height: 90%;
@@ -389,7 +402,8 @@ body{
     justify-content: center;
 
     gap: 1vh;
-    padding: 1vh;
+    padding: 5px;
+    
 }
 .secondLineSubSection:hover{
     cursor: pointer;
@@ -400,20 +414,21 @@ body{
 }
 
 .contentSectionExpend{
-    width: 35vw;
+    width: 40vw;
     background-color: rgb(132, 240, 204, 0.7);
-    margin: 0 23vw 0 0;
+    margin: 0 27vw 0 0;
     justify-content: flex-start;
 
     gap: 1vh;
     padding: 1vh;
+
+    z-index: 1; 
+
 }
-.contentSectionExpend:hover{
-    background-color: cadetblue;
-}
+
 .contentSectionSubSection{
     height: 90%;
-    width: 7vw;
+    width: 8vw;
 
     background-color: rgb(215, 174, 144);
 
@@ -424,6 +439,7 @@ body{
     justify-content: center;
 
     color: rgb(69, 45, 45);
+    text-align: center;
 
     /* z-index: 1; */
 }
@@ -443,9 +459,9 @@ body{
 .CSSItem{
 
     font-size: 3vh;
-    width: 90%;
-    height: 5vh;
-    background-color: rgb(200, 158, 240);
+    width: 100%;
+    height: 7vh;
+    background-color: rgb(171, 180, 143);
 
     display: flex;
     flex-direction: column;
@@ -458,29 +474,28 @@ body{
     margin: 2px;
 }
 .CSSItem:hover{
-    background-color: burlywood;
-    /* font-size: 3vh; */
+    background-color: rgb(227, 227, 160);
+    font-size: 3vh; 
+    min-width: 8vw;
     width: auto;
     height: 8vh;
     z-index: 1;
 }
 
 .templatesSectionExpent{
-    width: 35vw;
-    background-color: cornflowerblue;
-    margin: 0 23vw 0 0;
+    width: 40vw;
+    background-color: rgb(138, 166, 219);
+    margin: 0 27vw 0 0;
 
     justify-content: flex-start;
 
     gap: 1vh;
     padding: 1vh;
 }
-.templatesSectionExpent:hover{
-    background-color: rgb(135, 182, 128);
-}
+
 .tempSSection{
     height: 90%;
-    width: 7vw;
+    width: 9vw;
 
     background-color: rgb(215, 174, 144);
 
@@ -489,14 +504,15 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 
     color: rgb(69, 45, 45);
 
-    /* z-index: 1; */
+    overflow: hidden;
+
 }
 
-.addingSectionExpend{
+/* .addingSectionExpend{
     width: 30vw;
     background-color: aquamarine;
     margin: 0 17vw 0 0;
@@ -507,6 +523,37 @@ body{
 }
 .addingSectionExpend:hover{
     background-color: rgb(95, 160, 97);
+} */
+.templateListItem{
+
+    font-size: 3vh;
+    min-width: 100%; 
+    width: auto;
+    height: 7vh;
+    background-color: rgb(158, 196, 240);
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    border-radius: 1vh;
+    overflow: hidden;
+    
+    margin: 2px;
+    }
+.templateListItem:hover{
+    background-color: rgb(119, 174, 126);
+    /* font-size: 3vh; */
+    min-width: 8vw;
+    font-size: 3vh;
+    width: auto;
+    height: 8vh;
+    z-index: 1;
+}
+.templateIcon{
+    height: 50%;
+    width: 40%;
 }
 
 
