--- a/index.css
+++ b/index.css
@@ -102,13 +102,13 @@ body{
 
 #rightSideContact{
     
-    margin-top: 40%;
+    margin-top: 50%;
     width: 40%;
 
     display: flex;
     flex-direction: column;
     align-items:center;
-    justify-content: space-around;
+    justify-content: center;
     gap: 2vh;
 }
 
@@ -132,7 +132,7 @@ body{
     text-align: center;
     border: 2px solid rgb(33, 28, 19);
     overflow: hidden;
-    font-size: 3vh;
+    font-size: 2vh;
 }
 .item:hover{
     cursor: pointer;
